# Project_ML_volatility

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: config.yaml
docs/: theory.tex
notebooks/: 01_exploration.ipynb
scripts/: run_backtest.py  run_daily_signal.py  run_download.py  run_features.py  run_strategy_benchmarks.py  run_tail_model.py  run_train.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  metrics.py
src/data/: __init__.py  download.py  preprocess.py
src/features/: __init__.py  volatility_features.py
src/models/: __init__.py  baseline.py  evaluation.py  ml_model.py  tail_model.py  walkforward.py
src/signals/: __init__.py  benchmarks.py  recommendation.py  volatility_signal.py
src/utils/: __init__.py  io.py  notify.py
tests/: test_advanced_models.py  test_benchmarks.py  test_lookahead.py  test_recommendation.py  test_signal.py  test_tail_model.py
