[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vol_ml_fund"
version = "0.1.0"
description = "Research platform for volatility trading with machine learning"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "yfinance>=0.2.40",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "streamlit>=1.35",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
